<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2017 knilch - freeshisen@cwde.de
  ~ Copyright (c) 2013 contact.proofofconcept@gmail.com
  ~
  ~ Licensed under GNU General Public License, version 2 or later.
  ~ Some rights reserved. See COPYING.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:text="@string/besttimes"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:text="@string/diff_hard"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hiscore_large1" />

        <TextView
            android:id="@+id/textViewHL1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invalidtime"
            android:textIsSelectable="true" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hiscore_2nd" />

        <TextView
            android:id="@+id/textViewHL2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invalidtime"
            android:textIsSelectable="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp" >

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hiscore_medium1st" />

        <TextView
            android:id="@+id/textViewHM1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invalidtime"
            android:textIsSelectable="true" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hiscore_2nd" />

        <TextView
            android:id="@+id/textViewHM2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invalidtime"
            android:textIsSelectable="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp" >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hiscore_small1" />

        <TextView
            android:id="@+id/textViewHS1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invalidtime"
            android:textIsSelectable="true" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hiscore_2nd" />

        <TextView
            android:id="@+id/textViewHS2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invalidtime"
            android:textIsSelectable="true" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:text="@string/diff_easy"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp" >

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hiscore_large1" />

        <TextView
            android:id="@+id/textViewEL1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invalidtime"
            android:textIsSelectable="true" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hiscore_2nd" />

        <TextView
            android:id="@+id/textViewEL2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invalidtime"
            android:textIsSelectable="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp" >

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hiscore_medium1st" />

        <TextView
            android:id="@+id/textViewEM1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invalidtime"
            android:textIsSelectable="true" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hiscore_2nd" />

        <TextView
            android:id="@+id/textViewEM2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invalidtime"
            android:textIsSelectable="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp" >

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hiscore_small1" />

        <TextView
            android:id="@+id/textViewES1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invalidtime"
            android:textIsSelectable="true" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hiscore_2nd" />

        <TextView
            android:id="@+id/textViewES2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invalidtime"
            android:textIsSelectable="true" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="0dip"
        android:layout_margin="2dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:hint="@string/reset_hiscore_hint"
        android:onClick="clearHiscore"
        android:text="@string/reset_hiscore" />

</LinearLayout>